<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_makanan"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:paddingTop="50dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/donat"
                android:src="@drawable/donut_circle"
                android:onClick="clickDonat"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/donat"
                android:layout_toRightOf="@id/donat"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ini_donut"
                    android:text="@string/donut" />
                <TextView
                    android:id="@+id/harga_donut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_2000" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/froyo"
                android:src="@drawable/froyo_circle"
                android:onClick="clickFroyo"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/froyo"
                android:layout_toRightOf="@id/froyo"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ini_froyo"
                    android:text="@string/froyo" />
                <TextView
                    android:id="@+id/harga_froyo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_4000" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/ice_cream"
                android:onClick="clickIceCream"
                android:src="@drawable/icecream_circle"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ice_cream"
                android:layout_toRightOf="@id/ice_cream"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ini_ice"
                    android:text="@string/ice_cream" />
                <TextView
                    android:id="@+id/harga_ice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_5000" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>




</ScrollView>